# nnzip-kolmo

./: .gitattributes  .gitignore  AGENTS.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/workflows/: determinism.yml
benchmarks/: copy_stats.py  crossover.py  enwik_context_sweep.py  enwik_copy_bpb_sweep.py  enwik_copy_cost.py  enwik_copy_min_sweep.py  enwik_copy_stats.py  enwik_literal_mix_sweep.py  enwik_offset_repeats.py  enwik_prefix.py  enwik_schedule_sweep.py  fixed_kv_cache_speed.py  fixed_vs_pytorch_ratio.py  long_crossover.py  real_corpus.py  torch_compile_speedup.py
benchmarks/corpus/: code_python.py  dialogue.txt  json_data.json  markdown_docs.md  prose_modern.txt  repetitive.txt  wiki_factual.txt
benchmarks/determinism/: README.md  assert_ratio_floor.py  hash_after_warmup.py  hash_compress.py  hash_fixed_compress.py  hash_fixed_compress_long.py  hash_fixed_forward.py  hash_fixed_training.py  hash_int_freqs.py  hash_model_state.py  hash_no_training.py  hash_numpy_forward.py  hash_pytorch_freqs.py  hash_q15_matmul.py  make_blob.py  measure_train_drift.py  try_decompress.py
benchmarks/kaggle/: bench_kernel.py  kernel-metadata.json  run_bench.py
kolmo/: __init__.py  __main__.py  _engine.py  _generate_tables.py  _kernels.py  _predictors.py  codec.py  compress.py  decompress.py  det_probs.py  fixed.py  fixed_kv_cache.py  fixed_model.py  fixed_optim.py  fixed_train.py  model.py  np_model.py  seed_cache.py  stable_init.py  tokenizer.py
tests/: conftest.py  test_cli.py  test_compression_ratio.py  test_copy_history.py  test_det_probs.py  test_fixed.py  test_fixed_kv_cache.py  test_fixed_model.py  test_fixed_optim.py  test_fixed_train.py  test_kernels.py  test_literal_model.py  test_model.py  test_np_model.py  test_roundtrip.py  test_seed_cache.py  test_stable_init.py  test_training_schedule.py  test_training_works.py
tests/_torch_mock/: __init__.py
